# oxide-rs

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: api-reference.md  architecture.md  examples.md  getting-started.md  library-usage.md
src/: lib.rs  main.rs
src/cli/: banner.rs  download.rs  history.rs  loader.rs  mod.rs  output.rs  spinner.rs  stream.rs  theme.rs
src/inference/: dynamic_batcher.rs  generator.rs  mod.rs  paged_cache.rs  thread_pinner.rs
src/model/: download.rs  loader.rs  mod.rs  quantized_qwen35.rs  registry.rs  tokenizer.rs
src/server/: error.rs  main.rs  mod.rs  router.rs  state.rs
src/server/handlers/: chat.rs  mod.rs  models.rs
src/server/types/: mod.rs  request.rs  response.rs
src/tui/: app.rs  mod.rs  run.rs  state.rs  theme.rs
src/tui/components/: input.rs  mod.rs  notification.rs  sidebar.rs  status_bar.rs
src/tui/screens/: chat.rs  mod.rs  models.rs  settings.rs
src/ui/: app.rs  chat.rs  input.rs  mod.rs
tmp/: 99-3252-prompt  99-7278-prompt  99-9103  99-9103-prompt
