[package]
name = "oxide"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AI Inference CLI in Rust - llama.cpp style"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "261f727f" }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "261f727f" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "261f727f" }
tokenizers = "0.19"
shimmytok = "0.7"
memmap2 = "0.9"
crossterm = "0.28"
minijinja = "2.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.16"
sha2 = "0.10"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
